--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -49,6 +49,8 @@
   "admin": {
     "title": "管理パネル",
     "events": "イベント管理",
+    "dashboard": "ダッシュボード",
+    "users": "ユーザー管理",
     "sports": "競技管理",
     "settings": "設定",
     "createEvent": "イベント作成",
@@ -68,6 +70,120 @@
     "eventCustom": "カスタム形式",
     "sportDetails": "競技詳細",
     "sportName": "競技名",
-    "sportFormat": "形式"
+    "sportFormat": "形式",
+    "eventCreated": "イベントが作成されました",
+    "sportCreated": "競技が作成されました",
+    "saving": "保存中...",
+    "saved": "保存しました",
+    "saveError": "保存に失敗しました",
+    "unsavedChanges": "未保存の変更があります",
+    "createFirstEvent": "最初のイベントを作成",
+    "createFirstSport": "最初の競技を作成",
+    "setEventActive": "このイベントをアクティブにする",
+    "activeEvent": "現在のイベント",
+    "noActiveEvent": "アクティブなイベントがありません",
+    "manageSport": "競技を管理",
+    "backToAdmin": "管理画面に戻る",
+    "sportsCount": "競技数: {{count}}",
+    "noSports": "競技がありません",
+    "noSportsInEvent": "このイベントには競技がありません"
+  },
+  "settings": {
+    "appearance": "外観",
+    "language": "言語",
+    "darkMode": "ダークモード",
+    "enabled": "有効",
+    "disabled": "無効",
+    "autoSave": "自動保存",
+    "autoSaveDescription": "変更を自動的に保存します",
+    "autoSaveInterval": "自動保存間隔",
+    "seconds": "秒",
+    "savedSuccessfully": "設定を保存しました"
+  },
+  "scoring": {
+    "score": "スコア",
+    "winner": "勝者",
+    "loser": "敗者",
+    "draw": "引き分け",
+    "noWinner": "勝者なし",
+    "noLoser": "敗者なし",
+    "noDraw": "引き分けなし",
+    "noScores": "スコアがありません",
+    "updateScores": "スコアを更新"
+  },
+  "tournament" : {
+    "title": "タイトル",
+    "round": "ラウンド",
+    "match": "マッチ",
+    "team": "チーム",
+    "score": "スコア",
+    "winner": "勝者",
+    "loser": "敗者",
+    "draw": "引き分け",
+    "noWinner": "勝者なし",
+    "noLoser": "敗者なし",
+    "noDraw": "引き分けなし",
+    "noMatches": "マッチがありません",
+    "noTeams": "チームがありません",
+    "noScores": "スコアがありません",
+    "noRounds": "ラウンドがありません",
+    "noBracket": "トーナメントがありません",
+    "noRoundRobin": "総当たり戦がありません",
+    "noCustom": "カスタム形式がありません",
+    "noParticipants": "参加者がいません",
+    "noParticipantsInSport": "この競技には参加者がいません",
+    "manageTeams": "チームを管理"
+  },
+  "roundRobin" : {
+    "round": "ラウンド",
+    "match": "マッチ",
+    "team": "チーム",
+    "score": "スコア",
+    "winner": "勝者",
+    "loser": "敗者",
+    "draw": "引き分け",
+    "noWinner": "勝者なし",
+    "noLoser": "敗者なし",
+    "noDraw": "引き分けなし",
+    "noMatches": "マッチがありません",
+    "noTeams": "チームがありません",
+    "noScores": "スコアがありません",
+    "noRounds": "ラウンドがありません",
+    "noBracket": "トーナメントがありません",
+    "noRoundRobin": "総当たり戦がありません",
+    "noCustom": "カスタム形式がありません",
+    "noParticipants": "参加者がいません",
+    "noParticipantsInSport": "この競技には参加者がいません"
+  },
+  "custom" : {
+    "round": "ラウンド",
+    "match": "マッチ",
+    "team": "チーム",
+    "score": "スコア",
+    "winner": "勝者",
+    "loser": "敗者",
+    "draw": "引き分け",
+    "noWinner": "勝者なし",
+    "noLoser": "敗者なし",
+    "noDraw": "引き分けなし",
+    "noMatches": "マッチがありません",
+    "noTeams": "チームがありません",
+    "noScores": "スコアがありません",
+    "noRounds": "ラウンドがありません",
+    "noBracket": "トーナメントがありません",
+    "noRoundRobin": "総当たり戦がありません",
+    "noCustom": "カスタム形式がありません",
+    "noParticipants": "参加者がいません",
+    "noParticipantsInSport": "この競技には参加者がいません"
+  },
+  "users": {
+    "title": "ユーザー管理",
+    "usersCount": "ユーザー数: {{count}}",
+    "noUsers": "ユーザーがいません",
+    "noUsersInEvent": "このイベントにはユーザーがいません"
+  },
+  "notFound": {
+    "title": "ページが見つかりません",
+    "message": "お探しのページが見つかりませんでした"
   }
 }
