i18nの日本語ローカライズを更新し、ログアウト機能を追加。AdminLayoutでのナビゲーションを改善し、404ページのリダイレクト処理を実装。useDatabaseフックのキャッシュ機能を削除し、DeleteConfirmationDialogコンポーネントを追加。

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -17,7 +17,10 @@
     "viewEvent": "イベントを見る",
     "adminPanel": "管理パネル"
   },
-  "events": {
+  "auth" : {
+    "logout" : "ログアウト"
+  },
+  "event": {
     "currentEvents": "現在のイベント",
     "noEvents": "イベントがありません",
     "selectEvent": "イベントを選択",
