総当たり戦の順位決定方式を追加し、表示順位数や上位チームの情報を表示する機能を実装。関連する型定義を整理し、スコアリングコンポーネントに閲覧用テーブルを追加。

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -156,7 +156,16 @@
     "noRoundRobin": "総当たり戦がありません",
     "noCustom": "カスタム形式がありません",
     "noParticipants": "参加者がいません",
-    "noParticipantsInSport": "この競技には参加者がいません"
+    "noParticipantsInSport": "この競技には参加者がいません",
+    "rankingMethod": "順位決定方式",
+    "rankByPoints": "勝ち点方式",
+    "rankByGoalDiff": "得失点差方式",
+    "rankByGoals": "得点方式",
+    "displayRankCount": "表示順位数",
+    "topTeams": "上位チーム",
+    "record": "成績",
+    "goalRecord": "得失点",
+    "currentStandings": "現在の順位表"
   },
   "custom" : {
     "round": "ラウンド",
