翻訳データ追加1

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -61,6 +61,123 @@
     "createSport": "Create Sport",
     "editEvent": "Edit Event",
     "editSport": "Edit Sport",
-    "help": "Help"
+    "help": "Help",
+    "dashboard": "Dashboard",
+    "users": "User Management",
+    "eventCreated": "Event has been created",
+    "sportCreated": "Sport has been created",
+    "saving": "Saving...",
+    "saved": "Saved",
+    "saveError": "Failed to save",
+    "unsavedChanges": "You have unsaved changes",
+    "createFirstEvent": "Create First Event",
+    "createFirstSport": "Create First Sport",
+    "setEventActive": "Set as Active Event",
+    "activeEvent": "Active Event",
+    "noActiveEvent": "No Active Event",
+    "manageSport": "Manage Sport",
+    "backToAdmin": "Back to Admin",
+    "sportsCount": "Sports: {{count}}",
+    "noSports": "No sports available",
+    "noSportsInEvent": "No sports in this event",
+    "dashboardDescription": "Manage your sports events from this dashboard",
+    "save": "Save Changes",
+    "lastSaved": "Last saved: {{time}}",
+    "activeEventUpdated": "Active event has been updated",
+    "allChangesSaved": "All changes saved",
+    "manageEvent": "Manage Event",
+    "setActive": "Set Active",
+    "backToSportsManagement": "Back to Sports Management",
+    "active": "Active",
+    "quickActions": "Quick Actions",
+    "viewHelp": "View Help",
+    "eventList": "Event List",
+    "home": "Back to Home",
+    "error": "An error occurred"
+  },
+  "roster": {
+    "grade1": "First Grade",
+    "grade2": "Second Grade",
+    "grade3": "Third Grade",
+    "classList": "Class List",
+    "addClass": "Add Class",
+    "edit": "Edit",
+    "delete": "Delete",
+    "className": "Class Name",
+    "memberCount": "Members: {{count}}",
+    "memberList": "Member List",
+    "noClasses": "No classes available",
+    "noMembers": "No members",
+    "addMember": "Add Member",
+    "newMember": "New Member",
+    "viewEdit": "View/Edit"
+  },
+  "event": {
+    "active": "Active",
+    "alternativeDateHelp": "Set an alternative date if needed",
+    "setActive": "Set as Active",
+    "role": "Role",
+    "grade": "Grade",
+    "roleLeader": "Leader",
+    "roleMember": "Member",
+    "roleCustom": "Custom",
+    "grade1": "1st Grade",
+    "grade2": "2nd Grade",
+    "grade3": "3rd Grade",
+    "gradeUnit": "",
+    "organizerName": "Organizer Name",
+    "organizersList": "Organizers List",
+    "stats": "Statistics",
+    "sportsCount": "Sports Count",
+    "organizersCount": "Organizers Count",
+    "created": "Created At",
+    "manageSports": "Manage Sports",
+    "saveSuccess": "Successfully saved",
+    "saveError": "Failed to save",
+    "deleteSuccess": "Successfully deleted",
+    "deleteError": "Failed to delete",
+    "deleteConfirmTitle": "Delete Event",
+    "tabs": {
+      "details": "Details",
+      "organizers": "Organizers"
+    },
+    "manageOrganizers": "Manage Organizers",
+    "organizersHelp": "Organizers are responsible for managing and operating the event"
+  },
+  "sport": {
+    "teamName": "Team Name",
+    "teamColor": "Team Color",
+    "addTeam": "Add Team",
+    "editTeam": "Edit Team",
+    "confirmDeleteTeam": "Delete Team?",
+    "deleteTeamWarning": "You are about to delete {{name}}. This action cannot be undone.",
+    "roleLeader": "Leader",
+    "roleMember": "Member",
+    "roleCustom": "Custom",
+    "gradeUnit": "",
+    "grade1": "1st Grade",
+    "grade2": "2nd Grade",
+    "grade3": "3rd Grade",
+    "organizerName": "Organizer Name",
+    "role": "Role",
+    "grade": "Grade",
+    "noOrganizers": "No organizers assigned",
+    "tournamentDescription": "Single elimination tournament format",
+    "roundRobinDescription": "Everyone plays against everyone",
+    "customDescription": "Custom format for special rules",
+    "rules": "Rules",
+    "manual": "Manual",
+    "rulesHelp": "Enter the rules for this sport",
+    "manualHelp": "Enter the manual for running this sport"
+  },
+  "adminHelp": {
+    "title": "Admin Help",
+    "contents": "Contents",
+    "gettingStarted": "Getting Started",
+    "eventManagement": "Event Management",
+    "sportManagement": "Sport Management",
+    "scoring": "Scoring",
+    "customFormat": "Custom Format",
+    "faq": "FAQ"
   }
 }
