--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -33,7 +33,37 @@
     "eventParticipants": "参加者",
     "eventBracket": "トーナメント",
     "eventRoundRobin": "総当たり戦",
-    "eventCustom": "カスタム形式"
+    "eventCustom": "カスタム形式",
+    "active": "アクティブ",
+    "alternativeDateHelp": "予備日を設定できます",
+    "setActive": "アクティブに設定",
+    "role": "役割",
+    "grade": "学年",
+    "roleLeader": "リーダー",
+    "roleMember": "メンバー",
+    "roleCustom": "カスタム",
+    "grade1": "1年生",
+    "grade2": "2年生",
+    "grade3": "3年生",
+    "gradeUnit": "年",
+    "organizerName": "担当者名",
+    "organizersList": "担当者一覧",
+    "stats": "統計",
+    "sportsCount": "競技数",
+    "organizersCount": "担当者数",
+    "created": "作成日時",
+    "manageSports": "競技の管理",
+    "saveSuccess": "保存しました",
+    "saveError": "保存に失敗しました",
+    "deleteSuccess": "削除しました",
+    "deleteError": "削除に失敗しました",
+    "deleteConfirmTitle": "イベントの削除",
+    "tabs": {
+      "details": "基本情報",
+      "organizers": "担当者"
+    },
+    "manageOrganizers": "担当者管理",
+    "organizersHelp": "担当者はイベントの管理・運営を行うメンバーです"
   },
   "sports": {
     "tournament": "トーナメント",
@@ -89,7 +119,22 @@
     "backToAdmin": "管理画面に戻る",
     "sportsCount": "競技数: {{count}}",
     "noSports": "競技がありません",
-    "noSportsInEvent": "このイベントには競技がありません"
+    "noSportsInEvent": "このイベントには競技がありません",
+    "dashboardDescription": "このダッシュボードからスポーツイベントを管理できます",
+    "save": "変更を保存",
+    "lastSaved": "最終保存: {{time}}",
+    "activeEventUpdated": "アクティブイベントが更新されました",
+    "unsavedChangesWarning": "保存されていない変更があります。移動しますか？",
+    "allChangesSaved": "全ての変更が保存されました",
+    "manageEvent": "イベントを管理",
+    "setActive": "アクティブにする",
+    "backToSportsManagement": "競技管理に戻る",
+    "active": "アクティブ",
+    "quickActions": "クイックアクション",
+    "viewHelp": "ヘルプを表示",
+    "eventList": "イベント一覧",
+    "home": "ホームに戻る",
+    "error": "エラーが発生しました"
   },
   "settings": {
     "appearance": "外観",
@@ -202,5 +247,58 @@
   "notFound": {
     "title": "ページが見つかりません",
     "message": "お探しのページが見つかりませんでした"
+  },
+  "roster": {
+    "grade1": "1年生",
+    "grade2": "2年生",
+    "grade3": "3年生",
+    "classList": "クラス一覧",
+    "addClass": "クラスを追加",
+    "edit": "編集",
+    "delete": "削除",
+    "className": "クラス名",
+    "memberCount": "メンバー数: {{count}}人",
+    "memberList": "メンバー一覧",
+    "noClasses": "クラスがありません",
+    "noMembers": "メンバーがいません",
+    "addMember": "メンバーを追加",
+    "newMember": "新規メンバー",
+    "viewEdit": "表示・編集"
+  },
+  "sport": {
+    "teamName": "チーム名",
+    "teamColor": "チームカラー",
+    "addTeam": "チームを追加",
+    "editTeam": "チームを編集",
+    "confirmDeleteTeam": "チームを削除しますか？",
+    "deleteTeamWarning": "{{name}}を削除します。この操作は取り消せません。",
+    "roleLeader": "リーダー",
+    "roleMember": "メンバー",
+    "roleCustom": "カスタム",
+    "gradeUnit": "年",
+    "grade1": "1年生",
+    "grade2": "2年生",
+    "grade3": "3年生",
+    "organizerName": "担当者名",
+    "role": "役割",
+    "grade": "学年",
+    "noOrganizers": "担当者がいません",
+    "tournamentDescription": "トーナメント形式で試合を行います",
+    "roundRobinDescription": "総当たり戦で試合を行います",
+    "customDescription": "カスタム形式で試合を行います",
+    "rules": "ルール",
+    "manual": "マニュアル",
+    "rulesHelp": "競技のルールを記入してください",
+    "manualHelp": "競技の進行マニュアルを記入してください"
+  },
+  "adminHelp": {
+    "title": "管理者ヘルプ",
+    "contents": "目次",
+    "gettingStarted": "はじめに",
+    "eventManagement": "イベント管理",
+    "sportManagement": "競技管理",
+    "scoring": "スコアリング",
+    "customFormat": "カスタム形式",
+    "faq": "よくある質問"
   }
 }
