翻訳データ追加2

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -168,7 +168,17 @@
     "rules": "Rules",
     "manual": "Manual",
     "rulesHelp": "Enter the rules for this sport",
-    "manualHelp": "Enter the manual for running this sport"
+    "manualHelp": "Enter the manual for running this sport",
+    "settings": "Sport Settings",
+    "organizers": "Organizers",
+    "teams": "Teams",
+    "teamList": "Team List",
+    "addTeamHelp": "Add teams to start the tournament",
+    "memberInput": "Member Input",
+    "teamUpdated": "Team updated",
+    "teamDeleted": "Team deleted",
+    "confirmGenerateMatches": "Generate Matches?",
+    "generateMatchesWarning": "This will delete all existing match data"
   },
   "adminHelp": {
     "title": "Admin Help",
@@ -179,5 +189,106 @@
     "scoring": "Scoring",
     "customFormat": "Custom Format",
     "faq": "FAQ"
+  },
+  "scoring": {
+    "title": "Scoring for {{name}}",
+    "matchList": "Match List",
+    "currentMatches": "Current Matches",
+    "upcomingMatches": "Upcoming Matches",
+    "completedMatches": "Completed Matches",
+    "matchDetails": "Match Details",
+    "matchStatus": "Match Status",
+    "status": {
+      "pending": "Pending",
+      "inProgress": "In Progress",
+      "completed": "Completed"
+    },
+    "saveAndNext": "Save & Next",
+    "matchResult": "Match Result",
+    "resetMatch": "Reset Match",
+    "confirmReset": "Reset Match?",
+    "resetMessage": "This will reset the score and result."
+  },
+  "tournament": {
+    "bracket": "Tournament Bracket",
+    "matchCount": "Matches: {{count}}",
+    "roundCount": "Rounds: {{count}}",
+    "finalMatch": "Final",
+    "semifinals": "Semifinals",
+    "quarterfinals": "Quarterfinals",
+    "firstRound": "First Round",
+    "secondRound": "Second Round",
+    "thirdPlaceMatch": "Third Place Match",
+    "roundOf16": "Round of 16",
+    "roundOf8": "Quarter Finals",
+    "roundOf4": "Semi Finals",
+    "nextMatch": "Next Match",
+    "previousMatch": "Previous Match",
+    "settings": "Tournament Settings",
+    "hasThirdPlace": "Include Third Place Match",
+    "seed": "SEED",
+    "tbd": "TBD",
+    "teamSelect": "Select Teams",
+    "buildBracket": "Build Tournament Bracket",
+    "resetBracket": "Reset Bracket",
+    "confirmReset": "Reset Tournament Bracket?",
+    "resetWarning": "All existing match data will be deleted",
+    "seedTeams": "Seed Teams",
+    "generateMatches": "Generate Matches",
+    "editMatch": "Edit Match",
+    "updateScore": "Update Score",
+    "teamWinner": "{{team}} Wins",
+    "matchComplete": "Match Complete"
+  },
+  "teamManagement": {
+    "title": "Team Management",
+    "selectTeams": "Select Teams",
+    "addTeam": "Add Team",
+    "editTeam": "Edit Team",
+    "deleteTeam": "Delete Team",
+    "name": "Team Name",
+    "color": "Team Color",
+    "members": "Members",
+    "noMembers": "No members",
+    "addMember": "Add Member",
+    "removeMember": "Remove Member",
+    "confirmDelete": "Delete Team?",
+    "deleteWarning": "Deleting this team will also remove related match data",
+    "updateSuccess": "Team updated successfully",
+    "deleteSuccess": "Team deleted successfully",
+    "updateError": "Failed to update team",
+    "deleteError": "Failed to delete team"
+  },
+  "matchEdit": {
+    "title": "Edit Match",
+    "team1": "Team 1",
+    "team2": "Team 2",
+    "score": "Score",
+    "status": "Status",
+    "startTime": "Start Time",
+    "endTime": "End Time",
+    "location": "Location",
+    "notes": "Notes",
+    "setWinner": "Set Winner",
+    "confirmComplete": "Mark match as complete?",
+    "completeWarning": "Please verify scores and winner",
+    "updateSuccess": "Match updated successfully",
+    "updateError": "Failed to update match"
+  },
+  "roundRobin": {
+    "standings": "Standings",
+    "points": "Points",
+    "played": "Played",
+    "won": "Won",
+    "drawn": "Drawn",
+    "lost": "Lost",
+    "goalsFor": "Goals For",
+    "goalsAgainst": "Goals Against",
+    "goalDifference": "Goal Difference",
+    "position": "Position",
+    "nextRound": "Next Round",
+    "previousRound": "Previous Round",
+    "round": "Round {{number}}",
+    "matchday": "Matchday {{number}}"
   }
 }
