--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -157,7 +157,24 @@
     "noLoser": "敗者なし",
     "noDraw": "引き分けなし",
     "noScores": "スコアがありません",
-    "updateScores": "スコアを更新"
+    "updateScores": "スコアを更新",
+    "title": "{{name}}のスコア管理",
+    "matchList": "試合一覧",
+    "currentMatches": "現在の試合",
+    "upcomingMatches": "upcoming matches",
+    "completedMatches": "completed matches",
+    "matchDetails": "試合詳細",
+    "matchStatus": "試合状態",
+    "status": {
+      "pending": "待機中",
+      "inProgress": "進行中",
+      "completed": "完了"
+    },
+    "saveAndNext": "保存して次へ",
+    "matchResult": "試合結果",
+    "resetMatch": "試合をリセット",
+    "confirmReset": "試合をリセットしますか？",
+    "resetMessage": "スコアと結果がリセットされます。"
   },
   "tournament" : {
     "title": "タイトル",
@@ -180,7 +197,36 @@
     "noCustom": "カスタム形式がありません",
     "noParticipants": "参加者がいません",
     "noParticipantsInSport": "この競技には参加者がいません",
-    "manageTeams": "チームを管理"
+    "manageTeams": "チームを管理",
+    "bracket": "トーナメント表",
+    "matchCount": "試合数: {{count}}",
+    "roundCount": "ラウンド数: {{count}}",
+    "finalMatch": "決勝戦",
+    "semifinals": "準決勝",
+    "quarterfinals": "準々決勝",
+    "firstRound": "1回戦",
+    "secondRound": "2回戦",
+    "thirdPlaceMatch": "3位決定戦",
+    "roundOf16": "16強",
+    "roundOf8": "8強",
+    "roundOf4": "4強",
+    "nextMatch": "次の試合",
+    "previousMatch": "前の試合",
+    "settings": "トーナメント設定",
+    "hasThirdPlace": "3位決定戦を実施",
+    "seed": "シード",
+    "tbd": "未定",
+    "teamSelect": "チーム選択",
+    "buildBracket": "トーナメント表の作成",
+    "resetBracket": "トーナメント表のリセット",
+    "confirmReset": "トーナメント表をリセットしますか？",
+    "resetWarning": "既存の試合データは全て削除されます",
+    "seedTeams": "シード設定",
+    "generateMatches": "試合を生成",
+    "editMatch": "試合の編集",
+    "updateScore": "スコアの更新",
+    "teamWinner": "{{team}}の勝利",
+    "matchComplete": "試合完了"
   },
   "roundRobin" : {
     "round": "ラウンド",
@@ -215,7 +261,21 @@
     "confirmReset": "スコアリセット確認",
     "resetScores": "スコアをリセット",
     "keepScores": "スコアを保持",
-    "resetScoresConfirm": "既存の試合スコアがあります。チームを更新する際にスコアをリセットしますか？"
+    "resetScoresConfirm": "既存の試合スコアがあります。チームを更新する際にスコアをリセットしますか？",
+    "standings": "順位表",
+    "points": "勝ち点",
+    "played": "試合数",
+    "won": "勝",
+    "drawn": "分",
+    "lost": "敗",
+    "goalsFor": "得点",
+    "goalsAgainst": "失点",
+    "goalDifference": "得失点差",
+    "position": "順位",
+    "nextRound": "次のラウンド",
+    "previousRound": "前のラウンド",
+    "round": "第{{number}}節",
+    "matchday": "第{{number}}試合日"
   },
   "custom" : {
     "round": "ラウンド",
@@ -289,7 +349,17 @@
     "rules": "ルール",
     "manual": "マニュアル",
     "rulesHelp": "競技のルールを記入してください",
-    "manualHelp": "競技の進行マニュアルを記入してください"
+    "manualHelp": "競技の進行マニュアルを記入してください",
+    "settings": "競技設定",
+    "organizers": "担当者",
+    "teams": "チーム",
+    "teamList": "チーム一覧",
+    "addTeamHelp": "チームを追加してトーナメントを開始できます",
+    "memberInput": "メンバー入力",
+    "teamUpdated": "チームを更新しました",
+    "teamDeleted": "チームを削除しました",
+    "confirmGenerateMatches": "試合を生成しますか？",
+    "generateMatchesWarning": "既存の試合データは削除されます"
   },
   "adminHelp": {
     "title": "管理者ヘルプ",
@@ -300,5 +370,40 @@
     "scoring": "スコアリング",
     "customFormat": "カスタム形式",
     "faq": "よくある質問"
+  },
+  "teamManagement": {
+    "title": "チーム管理",
+    "selectTeams": "チームを選択",
+    "addTeam": "チームを追加",
+    "editTeam": "チームを編集",
+    "deleteTeam": "チームを削除",
+    "name": "チーム名",
+    "color": "チームカラー",
+    "members": "メンバー",
+    "noMembers": "メンバーがいません",
+    "addMember": "メンバーを追加",
+    "removeMember": "メンバーを削除",
+    "confirmDelete": "チームを削除しますか？",
+    "deleteWarning": "このチームを削除すると、関連する試合データも削除されます",
+    "updateSuccess": "チームを更新しました",
+    "deleteSuccess": "チームを削除しました",
+    "updateError": "チームの更新に失敗しました",
+    "deleteError": "チームの削除に失敗しました"
+  },
+  "matchEdit": {
+    "title": "試合の編集",
+    "team1": "チーム1",
+    "team2": "チーム2",
+    "score": "スコア",
+    "status": "状態",
+    "startTime": "開始時刻",
+    "endTime": "終了時刻",
+    "location": "場所",
+    "notes": "メモ",
+    "setWinner": "勝者を設定",
+    "confirmComplete": "試合を完了としてマークしますか？",
+    "completeWarning": "スコアと勝者を確認してください",
+    "updateSuccess": "試合を更新しました",
+    "updateError": "試合の更新に失敗しました"
   }
 }
