トーナメントスコアリングコンポーネントの表示改善と国際化対応

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -214,7 +214,7 @@
     "members": "参加者数",
     "generate": "トーナメント表生成",
     "title": "タイトル",
-    "round": "ラウンド",
+    "round": "ラウンド{{round}}",
     "match": "マッチ",
     "team": "チーム",
     "score": "スコア",
